--- a/app/src/app/globals.css
+++ b/app/src/app/globals.css
@@ -76,3 +76,11 @@
     @apply bg-background text-foreground;
   }
 }
+
+* {
+  padding: 0;
+  margin: 0;
+  border: 0;
+  outline: 0;
+  box-sizing: border-box;
+}
